--- a/TaskManager/UserPageWindow.xaml
+++ b/TaskManager/UserPageWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskManager"
         mc:Ignorable="d"
-        Title="UserPageWindow" Height="450" Width="800">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        WindowStartupLocation="CenterScreen"
+        Title="ТаскМанагер" Height="600" Width="1000">
     <Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="63,91,0,0" VerticalAlignment="Top" Height="138" Width="181"/>
+        <TextBlock HorizontalAlignment="Left" Margin="63,50,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="36" Width="472"/>
         
     </Grid>
 </Window>
